[package]
name = "drv-tm4c123g-gpio"
version = "0.1.0"
edition = "2021"

[dependencies]
idol-runtime = { workspace = true }
boxxo = { workspace = true }
zerocopy = { workspace = true }
num-traits = { workspace = true }

drv-tm4c123g-gpio-api = { path = "../tm4c123g-gpio-api" }
drv-tm4c123g-syscon-api = { path = "../tm4c123g-syscon-api" }
userlib = { path = "../../sys/userlib" }

[build-dependencies]
idol = { workspace = true }

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "drv-tm4c123g-gpio"
test = false
doctest = false
bench = false
